csrf_token missing

--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -20,6 +20,7 @@
         <div>
             {{ form.submit_button }}
         </div>
+        {{ form.csrf_token }}
     </form>
       <a href="{{url_for('user.login')}}" class="w-40 btn btn-primary">Log In</a>
      <a href="{{url_for('main.contact')}}" class="w-40 btn btn-primary">Contact us</a>
